--- a/app.json
+++ b/app.json
@@ -1,52 +1,85 @@
 {
-  "name": "Auto-Forward-Bot-V2",
-  "description": "Telegram's Best Smart Plugin File Forward Bot",
-  "logo": "https://telegra.ph/file/5c3499c3b2ec282cf0c4e.jpg",
-  "stack": "container",
-  "keywords": [
-    "telegram",
-    "best",
-    "file",
-    "forward",
-    "bot"
-  ],
-  "success_url": "https://t.me/DForDarkAngel",
-  "website": "https://github.com/SadKidBGMZ/fwdbot",
-  "repository": "https://github.com/SadKidBGMZ/fwdbot",
-  "env": {
-    "API_ID": {
-      "description": "Get this value from https://my.telegram.org or @UseTGSBot",
-      "value": ""
+    "name": "JISSHU-BOT",
+    "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
+    "stack": "container",
+    "keywords": [
+      "telegram",
+      "auto-filter",
+      "filter",
+      "best",
+      "indian",
+      "pyrogram",
+      "media",
+      "search",
+      "channel",
+      "index",
+      "inline"
+    ],
+    "website": "https://github.com/Jisshubot/JISSHU-BOT",
+    "repository": "https://github.com/Jisshubot/JISSHU-BOT",
+    "env": {
+        "BOT_TOKEN": {
+            "description": "Your bot token.",
+            "required": true
+        },
+        "API_ID": {
+            "description": "Get this value from https://my.telegram.org",
+            "required": true
+        },
+        "API_HASH": {
+            "description": "Get this value from https://my.telegram.org",
+            "required": true
+        },
+        "CHANNELS": {
+            "description": "Username or ID of channel or group. Separate multiple IDs by space.",
+            "required": false
+        },
+        "ADMINS": {
+            "description": "Username or ID of Admin. Separate multiple Admins by space.",
+            "required": true
+        },
+        "PICS": {
+            "description": "Add some telegraph link of pictures .",
+            "required": false
+        },
+        "LOG_CHANNEL": {
+            "description": "Bot Logs,Give a channel id with -100xxxxxxx",
+            "required": true
+        },
+        "AUTH_USERS": {
+            "description": "Username or ID of users to give access of inline search. Separate multiple users by space.\nLeave it empty if you don't want to restrict bot usage.",
+            "required": false
+        },
+        "AUTH_CHANNEL": {
+            "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
+            "required": false
+        },
+        "BANNED_USERS": {
+            "description": "If you to ban any person then fill him/her user ID ",
+            "required": false
+        },
+        "DATABASE_URI": {
+            "description": "mongoDB URI. Get this value from https://www.mongodb.com. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
+            "required": true
+        },
+        "DATABASE_NAME": {
+            "description": "Name of the database in mongoDB. For more help watch this video - https://youtu.be/dsuTn4qV2GA",
+            "required": false
+        },
+        "COLLECTION_NAME": {
+            "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
+            "value": "Telegram_files",
+            "required": false
+        }
     },
-    "API_HASH": {
-      "description": "Get this value from https://my.telegram.org or @UseTGSBot",
-      "value": ""
-    },
-    "BOT_TOKEN": {
-      "description": "Your bot token from @BotFather",
-      "value": ""
-    },
-    "BOT_OWNER_ID": {
-      "description": "Enter Your Telegram id",
-      "value": ""
-    },
-    "BANNED_USERS": {
-      "description": "If you want to add a caption to the forwarded file, enter it here",
-      "required": false
-    },
-    "DATABASE_NAME": {
-      "description": "Type Of filters (document , audio , photo , video , animation)",
-      "value": "document"
-    },
-    "DATABASE_URI": {
-      "description": "pyrogram string Seccion - https://replit.com/@JijinR/PyroSessionString?v=1",", 
-      "value": ""
+    "addons": [],
+    "buildpacks": [{
+        "url": "heroku/python"
+    }],
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "eco"
+        }
     }
-  },
-  "formation": {
-    "worker": {
-      "quantity": 1,
-      "size": "free"
-    }
-  }
 }
